syntax = "proto2";

package vct.col.ast;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  lenses: false
  getters: false
  no_default_values_in_constructor: true
  package_name: "vct.col.ast.serialize"
};

message ExpectedError {
  // this
  //      message
  //              intentionally
  //                            left
  //                                 blank
}